--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,10 +1,10 @@
 steps:
   # Build the Docker image kevin
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', 'us-central1-docker.pkg.dev/analog-context-413503/kevinleander/nodejs-app:${COMMIT_SHA}', '.']
+    args: ['build', '-t', 'northamerica-northeast2-docker.pkg.dev/analog-context-413503/kevinleandertest/nodejs-app:${COMMIT_SHA}', '.']
   # Push the Docker image to the artifact registry
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'us-central1-docker.pkg.dev/analog-context-413503/kevinleander/nodejs-app:${COMMIT_SHA}']
+    args: ['push', 'northamerica-northeast2-docker.pkg.dev/analog-context-413503/kevinleandertest/nodejs-app:${COMMIT_SHA}']
     
 options:
   # Set defaultLogsBucketBehavior to REGIONAL_USER_OWNED_BUCKET
@@ -13,4 +13,4 @@ options:
  
 images:
 # Store images in Google Artifact Registry
-  - us-central1-docker.pkg.dev/analog-context-413503/kevinleander/nodejs-app:${COMMIT_SHA}
+  - northamerica-northeast2-docker.pkg.dev/analog-context-413503/kevinleandertest/nodejs-app:${COMMIT_SHA}
