--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -6,6 +6,19 @@ steps:
   - name: 'gcr.io/cloud-builders/docker'
     args: ['push', 'northamerica-northeast2-docker.pkg.dev/analog-context-413503/kevinleandertest/nodejs-app:${COMMIT_SHA}']
     
+# Deploy the Docker container to Google Cloud Run
+  - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
+    entrypoint: 'sh'
+    args: 
+      - '-c'
+      - |
+        gcloud run deploy nodejs-app \
+          --image=northamerica-northeast2-docker.pkg.dev/analog-context-413503/kevinleandertest/nodejs-app:${COMMIT_SHA} \
+          --platform=managed \
+          --region=us-central1 \
+          --port=3000 \
+          --allow-unauthenticated
+    
 options:
   # Set defaultLogsBucketBehavior to REGIONAL_USER_OWNED_BUCKET
   # defaultLogsBucket: 'gs://your-build-logs-bucket' # Replace with your build logs bucket
